--- a/Transaction.API/Transaction.API.csproj
+++ b/Transaction.API/Transaction.API.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Application\command\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
