--- a/Transaction.Domain/Transaction.Domain.csproj
+++ b/Transaction.Domain/Transaction.Domain.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="AggreagatesModels\" />
+    <Folder Include="AggreagatesModels\NewFolder\" />
   </ItemGroup>
 
 </Project>
