--- a/Transaction.Infrastructure/Transaction.Infrastructure.csproj
+++ b/Transaction.Infrastructure/Transaction.Infrastructure.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Transaction.Domain\Transaction.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
