--- a/Transaction.API/appsettings.json
+++ b/Transaction.API/appsettings.json
@@ -9,6 +9,9 @@
     "Console": {
       "LogLevel": {
         "Default": "Warning"
+      },
+      "ConnectionStrings": {
+        "DefaultConnection": "server=(localdb)\\MSSQLLocalDB;Initial Catalog=TransactioDb;Integrated Security=True;"
       }
     }
   }
