--- a/Transaction.Infrastructure/Transaction.Infrastructure.csproj
+++ b/Transaction.Infrastructure/Transaction.Infrastructure.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Transaction.Domain\Transaction.Domain.csproj" />
   </ItemGroup>
 
