Issue solved:BuyerDbContext reference issue -Migration file added -AppSetting connection file added in startup.cs for migration -Connectionstring null value solved By Lalji solanki 12:44PM 12/08/2019

--- a/Transaction.API/appsettings.json
+++ b/Transaction.API/appsettings.json
@@ -9,10 +9,11 @@
     "Console": {
       "LogLevel": {
         "Default": "Warning"
-      },
-      "ConnectionStrings": {
-        "DefaultConnection": "server=(localdb)\\MSSQLLocalDB;Initial Catalog=TransactioDb;Integrated Security=True;"
       }
+
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Initial Catalog=TransactioDb;Trusted_Connection=True;Integrated Security=True"
   }
 }
