Done:EventBusCredencial added and GlobalQueue added By Lalji

--- a/Transaction.API/appsettings.json
+++ b/Transaction.API/appsettings.json
@@ -15,5 +15,10 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Initial Catalog=TransactioDb;Trusted_Connection=True;Integrated Security=True"
-  }
+  },
+
+  "GlobalQueue": "global",
+  "EventBusConnection": "localhost",
+  "EventBusUserName": "guest",
+  "EventBusPassword": "guest"
 }
