--- a/Transaction.Infrastructure/Transaction.Infrastructure.csproj
+++ b/Transaction.Infrastructure/Transaction.Infrastructure.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\Transaction.Domain\Transaction.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
