WIP:Changes in EventBusRabbitMQOperations

--- a/Transaction.API/appsettings.json
+++ b/Transaction.API/appsettings.json
@@ -1,4 +1,10 @@
 ﻿{
+
+  "GlobalQueue": "global",
+  "EventBusConnection": "localhost",
+  "EventBusUserName": "guest",
+  "EventBusPassword": "guest",
+
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
@@ -17,8 +23,5 @@
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Initial Catalog=TransactioDb;Trusted_Connection=True;Integrated Security=True"
   },
 
-  "GlobalQueue": "global",
-  "EventBusConnection": "localhost",
-  "EventBusUserName": "guest",
-  "EventBusPassword": "guest"
+  "AllowedHosts": "*"
 }
