WIP:Message test send done by lalji

--- a/Transaction.API/appsettings.json
+++ b/Transaction.API/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
 
-  "GlobalQueue": "global",
+  "GlobalQueue": "BuyerTransaction_ExchangeTEST",
   "EventBusConnection": "localhost",
   "EventBusUserName": "guest",
   "EventBusPassword": "guest",
