--- a/Transaction.Infrastructure/Transaction.Infrastructure.csproj
+++ b/Transaction.Infrastructure/Transaction.Infrastructure.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Databse\**" />
+    <EmbeddedResource Remove="Databse\**" />
+    <None Remove="Databse\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Autofac" Version="4.9.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.0" />
