Done:Changes in OcelotAPI/appsetting.json By lalj

--- a/OcelotAPI/configuration.json
+++ b/OcelotAPI/configuration.json
@@ -9,7 +9,7 @@
           "Port": 57553
         }
       ],
-      "UpstreamPathTemplate": "/api/{everything}",
+      "UpstreamPathTemplate": "/api/o/{everything}",
       "UpstreamHttpMethod": [ "Post" ]
     }
   ]
